aux/k8s/yaml/renovation-namespace.yaml
#
#     Created under not commercial project "Renovation"
#
#     Copyright 2021-2022
#
apiVersion: v1
kind: Namespace
metadata:
  name: renovation
  labels:
    name: renovation
